# useful-scripts

./: CreateFunctionTableDataType.java  MPC5674F.xml  README.md  docker-image-loader.py  mcf5272.cspec  mcf5272.java  mcf5272.ldefs  mcf5272.opinion  mcf5272.pspec  mcf5272_gcc.cspec  mcf5272_logical.sinc  mcf5272_shift.sinc  mpc5674f_flasher.py  ollama-downloader.py  scapy.txt  test
cpp_scripts/: ClassStructureBuilder.py  ConstructorFinder.py  ConstructorUtils.py  CppAnalysisManager.py  Ghidra C++ Reverse Engineering Scripts - Package Contents.md  Ghidra C++ Reverse Engineering Scripts.md  GhidraHelpers.py  Installation Guide.md  Usage Examples and Tutorials.md  VtableAnalyzer.py  VtableUtils.py  research_findings.md  script_design.md
mcf5272/: MCF5272MemoryMapEnhancedScript.java  mcf5272.slaspec  mcf5272_bit.sinc  mcf5272_mac.sinc
mpc/: CMakeLists.txt  FlashOS.h  FlashPrg.c  MPC5674F.xml  MPC5674F_Debug.JLinkScript  Makefile  README.md  SetMPC5674FSDA.java  dump_flash.jlink  dump_flash_full.jlink  linker.ld  mpc5674f.cspec  mpc5674f.pspec.pspec  set_mpc5674f_sda.py
zim-llm/: Deployment Checklist - ZIM Tools for Open-WebUI.md  ZIM Tools for Open-WebUI.md  setup_zim_environment.py  validate_tool_compatibility.py  zim_tools.py
